# vansol

./: Cargo.toml  README.md  vanity_address.json  vanity_address_2tBnBepbGV1FzHqrvL6vcxyZT2VasagZXEJmiscL66q2.json  vanity_address_8JKooezt2mJJ6oYThcWX846uzXFvQMVXdvjAasapxf6d.json  vansol.toml
src/: args.rs  core.rs  main.rs
