[package]
name = "vansol"
about = "A high-performance CLI tool for generating vanity addresses using multithreading"
version = "1.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }

bs58 = "0.5.1"
console = "0.15.11"
base64 = "0.21"
indicatif = "0.17.11"
num_cpus = "1.17.0"
solana-sdk = "2.3.0"
rayon = "1.10.0"
serde_json = "1.0.140"
chrono = "0.4.41"
rand = "0.9.1"
toml = "0.8"
dirs = "5.0"
prettytable = "0.10.0"
